# trac_ik

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  kdl_tl.cpp  nlopt_ik.cpp  nlopt_ik.hpp  trac_ik.cpp  trac_ik.hpp
test/: CMakeLists.txt  test_Dummy.cpp
